<resources>
    <string name="app_name">Golgolet</string>
    <string name="y_code_introduction">The next Y-code pulse is in</string>
    <string name="introduction">Fill in the data</string>
    <string name="velocity">*Velocity can written in Mach or Knots</string>
    <string name="altitude">*Altitude required only in Mach case</string>
    <string name="gun_angle_equals_to">Gun\'s angle equals to:</string>
    <string name="calculate">Calculate!</string>
    <string name="altitude_feet">Altitude (feet)</string>
    <string name="closing_speed_knots">Closing speed (knots)</string>
    <string name="victim_velocity">Victim velocity</string>
    <string name="shooter_velocity">Shooter velocity</string>
    <string name="amount_to_pay">Amount to pay (ILS)</string>
    <string name="tip_percents">Tip percents (%)</string>
    <string name="tip_amount">Tip amount:</string>
    <string name="number_of_payers">Number of payers</string>
    <string name="paying_with_credit">%s paying with credit: %s</string>
    <string name="splitter">Splitter - credit: %s, Hever %s</string>
    <string name="paying_with_hever">%s paying with Hever: %s</string>
    <string name="plan_your_pulse">Plan your pulse</string>
    <string name="the_pulse_after_in_s">The pulse after is in: %s</string>
    <string name="the_pulse_before_in_s">The pulse before is in: %s</string>
    <string name="hours_hint">08</string>
    <string name="minutes_hint">00</string>
    <string name="dotim">:</string>
    <string name="original_time">According to time: %s</string>
    <string name="plan_note">**From the start of the next pulse for 24 hours</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact">Contact info: balon94@gmail.com</string>
    <string name="about">This app was created for improving the life of the squadron\'s workforce \n \n If you faced a bug in the app please make a screen shot and send it via email \n \n You are welcome to contact via email and send your suggestions for improvement</string>
</resources>